--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,3 +11,23 @@
     justify-content: space-between;
     font-weight: bold;
 }
+
+.fav_button {
+    background-color: $color-light;
+    border: none;
+    i {
+        transition: $transition;
+        font-size: 16px;
+    }
+}
+
+.fav_button:hover {
+
+    i {
+       transform: scale(1.5);
+    }
+}
+
+.isFavorite {
+    color: $color-favorite-icon;
+}
