--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -12,7 +12,7 @@
     font-weight: bold;
 }
 
-.fav_button {
+.card_button {
     background-color: $color-light;
     border: none;
     i {
@@ -21,7 +21,7 @@
     }
 }
 
-.fav_button:hover {
+.card_button:hover {
 
     i {
        transform: scale(1.5);
